--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 body {
   background-color: rgb(255, 255, 255);
   font-family: "Exo", sans-serif;
+
+  overflow: hidden; /* Prevent scrolling */
+  touch-action: none; /* Disable default touch actions */
+}
+
+canvas {
+  margin-left: 0px;
+  margin-right: 10px;
+  /* Calculate the width to fill available space */
+  width: calc(100% - 10px);
+  height: 400;
+  /* Set the fixed height */
+  padding: 0;
 }
 
 h1,
