--- a/style.css
+++ b/style.css
@@ -138,3 +138,14 @@ nav {
   height: 10px;
   visibility: hidden;
 }
+
+.reset-button {
+  cursor: pointer;
+  color: #fff;
+  background-color: #0c6d24;
+  padding: 5px 10px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+}
