--- a/style.css
+++ b/style.css
@@ -27,20 +27,6 @@ select {
   padding: 5px;
 }
 
-.checkbox-container {
-  display: flex;
-  align-items: center;
-  margin: 0px; /* Optional: Add some margin */
-  margin-top: 15px;
-}
-
-/* Style for the label */
-.checkbox-label {
-  color: #333;
-  margin-left: 2px; /* Optional: Add some spacing between checkbox and label */
-  margin-bottom: 0px;
-}
-
 canvas {
   margin-left: 0px;
   margin-right: 10px;
@@ -94,6 +80,14 @@ p {
   color: hsl(0, 39%, 23%);
 }
 
+.menu-icon {
+  display: block;
+}
+.sub-menu {
+  margin-left: 0px;
+  margin-right: 0;
+  padding: 0px;
+}
 .menu-list {
   list-style: none;
   display: none;
@@ -117,37 +111,43 @@ p {
   list-style: none;
 }
 
-.sub-menu {
+.reset-button {
+  cursor: pointer;
+  background-color: #437e51;
+  color: #fff;
+
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+  padding: 5px 10px;
+  margin-top: 0px;
   margin-left: 0px;
-  margin-right: 0;
-  padding: 0px;
+  margin-right: 10px;
+  margin-bottom: 2px;
+}
+
+.regular-button {
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+  padding: 5px 10px;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 10px;
+  margin-bottom: 2px;
 }
 
 nav {
   position: fixed;
   top: 5px;
-  right: 5px;
+  right: 10px;
   z-index: 1000;
-}
-
-.menu-icon {
-  display: block;
 }
 
 .invisible-div {
   height: 10px;
   visibility: hidden;
-}
-
-.reset-button {
-  cursor: pointer;
-  color: #fff;
-  background-color: #0c6d24;
-  padding: 5px 10px;
-  margin-top: 10px;
-  border: none;
-  border-radius: 5px;
-  font-size: 1em;
 }
 
 header {
@@ -175,4 +175,35 @@ header {
 
 .title {
   margin-left: 20px; /* Adjust as needed for spacing between logo and title */
+}
+
+/* Styling for the pop-up panel */
+#helpPanel {
+  display: none;
+  position: fixed;
+
+  padding-left: 30px;
+  padding-top: 30px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  z-index: 1;
+
+  top: 50px;
+  right: 0;
+  width: 300px; /* Adjust the width as needed */
+}
+
+.helpList {
+  padding: 0px;
+  margin: 0px;
+}
+
+/* Styling for the close button */
+.close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  cursor: pointer;
 }
