--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ p {
   flex-direction: column;
   position: absolute;
   top: 40px;
-  left: -200px;
+  left: -240px;
   padding: 0px;
   margin: 0;
   background-color: #eee;
@@ -105,10 +105,24 @@ p {
 }
 
 .menu-list li {
-  margin-left: 0px;
+  margin-left: 5px;
   margin-right: 10px;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Styling for the label */
+.menu-list label {
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+}
+.menu-list span {
+  align-items: center;
+  color: gray;
 }
 
 .reset-button {
